# rust_roadmap

./: README.md
algorithms/crypto/src/: main.rs
algorithms/high_order_fxns/: Cargo.toml
algorithms/high_order_fxns/src/: main.rs
algorithms/nlp_fxns/: Cargo.toml
algorithms/nlp_fxns/src/: main.rs
basics/src/: main.rs
cli_apps/cipherize/: Cargo.toml  README.md
cli_apps/cipherize/src/: main.rs
cli_apps/convertx/: Cargo.toml  README.md
cli_apps/convertx/src/: main.rs
cli_apps/convertx/tests/: cli_tests.rs
data_analysis/: Cargo.toml
data_analysis/src/: main.rs
web_apps/cipher_app/: Cargo.toml
web_apps/cipher_app/src/: main.rs
web_apps/cipher_app/templates/: about.html  base.html  index.html
web_apps/crypto_cipher_app/: Cargo.toml
web_apps/crypto_cipher_app/src/: main.rs
web_apps/crypto_cipher_app/templates/: base.html  index.html
web_apps/rest_api/: Cargo.toml  README.md
web_apps/rest_api/migrations/: 20250105223413_create_blog_posts_table.sql
web_apps/rest_api/src/: main.rs  unstructured_main.rs
web_apps/rest_api/src/api/: docs.rs  errors.rs  mod.rs  routes.rs
web_apps/rest_api/src/db/: connection.rs  mod.rs  models.rs  queries.rs
