[package]
name = "cipher_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
cargo-watch = "8.5.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.217"
tera = "1.20.0"
